tests/paczka1/small_fuzzy/42451772.err
Error in line 2: YPB8'A562'42,5
Error in line 10: Uhg8oy9o A562 71,5
